--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Соловьёв И.А.</h1>
+        <p>Студент гр ИПуспк-322, учусь в КИТП при ВлГУ. Выполняю лабу и тщетно пытаюсь познать программирование</p>
+        <button>Подписаться на новости</button>
+    </div>
+</body>
+</html>
