Покрасил кнопку в фиолетовый цвет

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>Соловьёв И.А.</h1>
         <p>Студент гр ИПуспк-322, учусь в КИТП при ВлГУ. Выполняю лабу и тщетно пытаюсь познать программирование</p>
-        <button>Подписаться на новости</button>
+        <button style="background-color: blueviolet;">Подписаться на новости</button>
     </div>
 </body>
 </html>
